# caesaria-game

./: .cproject  .gitattributes  .gitignore  .project  .travis.yml  Android.mk  AndroidAppSettings.cfg  BuildingOpenCaesar3.md  CMakeLists.txt  EECE310-OpenSource.cpp  IMG_saveend.h  IMG_savepng.c  IMG_savepng.cpp  IMG_savepng.h  INSTALL_ANDROID  INSTALL_LINUX  INSTALL_MACOSX  INSTALL_WINDOWS  LICENSE  LICENSE_BSD2  README  README.md  building.cpp  building.hpp  building_data.cpp  building_data.hpp  caesar.cpp  caesar.hpp  changes.md  cities.model  city.cpp  city.hpp  construction.model  custom_event.cpp  custom_event.hpp  enums.hpp  factory_building.cpp  factory_building.hpp  gettext.hpp  gfx_engine.cpp  (+722 more)
addon/ave_c3/: CMakeLists.txt  main.cpp
dep/aes/: Android.mk  CMakeLists.txt  fileenc.cpp  hmac.cpp  pwd2key.cpp  sha2.cpp  sha2.h
dep/booster/: CMakeLists.txt  booster.cpp
dep/bzip2/: Android.mk  CMakeLists.txt
dep/curl/: CMakeLists.txt  mprintf.c  polarssl.h  setup.h  url.c
dep/freetype/: Android.mk  CMakeLists.txt
dep/libpng/: Android.mk  CMakeLists.txt
dep/lzma/: Android.mk  CMakeLists.txt
dep/minizip/: CMakeLists.txt
dep/picoc/: Android.mk  CMakeLists.txt  jserror.c  jsi.h  jsvalue.c  main.c  mujs.h  one.c
dep/sdl2mini/: Android.mk  CMakeLists.txt
dep/smk/: Android.mk  CMakeLists.txt  smacker.c  smacker.h
dep/ttf/: Android.mk  CMakeLists.txt  SDL_ttf.c  SDL_ttf.h
dep/zlib/: Android.mk  CMakeLists.txt  gzguts.h  gzwrite.c  zip.c  zip.h  zutil.h
sgreader/: CMakeLists.txt  README  aboutdialog.cpp  aboutdialog.h  imagetreeitem.cpp  imagetreeitem.h  licencedialog.cpp  licensedialog.cpp  licensedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  sgbitmap.cpp  sgbitmap.h  sgfile.cpp  sgfile.h  sgimage.cpp  sgimage.h  sgreader.pro  sgreader.qrc  sgreader.rc
sgreader/gui/: extractthread.cpp  extractthread.h  extractwizard.cpp  extractwizard.h  filelistpage.cpp  filelistpage.h  inputdirpage.cpp  inputdirpage.h  outputdirpage.cpp  outputdirpage.h  progresspage.cpp  progresspage.h
source/: Android.mk  CMakeLists.txt  CppDependProject.cdproj  main.cpp  version.hpp
source/building/: amphitheater.cpp  amphitheater.hpp  aqueduct.cpp  aqueduct.hpp  barracks.cpp  barracks.hpp  building.cpp  building.hpp  buildings.hpp  clay_pit.cpp  clay_pit.hpp  coastalbuilding.cpp  coastalbuilding.hpp  constants.hpp  desirability.hpp  education.cpp  education.hpp  engineer_post.cpp  engineer_post.hpp  entertainment.cpp  entertainment.hpp  factory.cpp  factory.hpp  farm.cpp  farm.hpp  fortification.cpp  fortification.hpp  forum.cpp  forum.hpp  garden.cpp  garden.hpp  gatehouse.cpp  gatehouse.hpp  goverment.cpp  goverment.hpp  granary.cpp  granary.hpp  health.cpp  health.hpp  high_bridge.cpp  (+47 more)
source/city/: active_points.cpp  active_points.hpp  ambientsound.cpp  ambientsound.hpp  areainfo.cpp  areainfo.hpp  build_options.cpp  build_options.hpp  city.cpp  city.hpp  city_impl.cpp  city_impl.hpp  city_option.cpp  city_option.hpp  cityservice.cpp  cityservice.hpp  cityservice_animals.cpp  cityservice_animals.hpp  cityservice_culture.cpp  cityservice_culture.hpp  cityservice_disorder.cpp  cityservice_disorder.hpp  cityservice_factory.cpp  cityservice_factory.hpp  cityservice_festival.cpp  cityservice_festival.hpp  cityservice_fire.cpp  cityservice_fire.hpp  cityservice_fishplace.cpp  cityservice_fishplace.hpp  cityservice_health.cpp  cityservice_health.hpp  cityservice_info.cpp  cityservice_info.hpp  cityservice_military.cpp  cityservice_military.hpp  cityservice_peace.cpp  cityservice_peace.hpp  cityservice_prosperity.cpp  cityservice_prosperity.hpp  (+76 more)
source/core/: addon_requirements.hpp  alignment.cpp  alignment.hpp  allocator.hpp  bytearray.cpp  bytearray.hpp  color.hpp  color_list.cpp  color_list.hpp  common.hpp  crashHandler.cpp  crashHandler.hpp  credits.in  debug_allocators.cpp  debug_allocators.hpp  debug_queue.hpp  debug_timer.cpp  debug_timer.hpp  delegate.hpp  direction.hpp  enumerator.hpp  event.cpp  event.hpp  eventconverter.cpp  eventconverter.hpp  exception.hpp  flagholder.hpp  flowlist.hpp  font.cpp  font.hpp  foreach.hpp  format.cpp  gettext.hpp  hash.cpp  hash.hpp  json.cpp  json.hpp  line.cpp  line.hpp  list.hpp  (+75 more)
source/events/: build.cpp  build.hpp  changebuildingoptions.cpp  changebuildingoptions.hpp  changeemperor.cpp  changeemperor.hpp  changeempireoptions.cpp  changeempireoptions.hpp  changehomeoptions.cpp  changehomeoptions.hpp  changespeed.cpp  changespeed.hpp  cityindebt.cpp  cityindebt.hpp  clearland.cpp  clearland.hpp  contaminated_water.cpp  contaminated_water.hpp  disaster.cpp  disaster.hpp  dispatcher.cpp  dispatcher.hpp  distant_battle.cpp  distant_battle.hpp  earthquake.cpp  earthquake.hpp  empiretax.cpp  empiretax.hpp  enemy_attack.cpp  enemy_attack.hpp  event.cpp  event.hpp  factory.cpp  factory.hpp  fireworkers.cpp  fireworkers.hpp  fishplace.cpp  fishplace.hpp  fundissue.cpp  fundissue.hpp  (+89 more)
source/font/: font.cpp  font.hpp  font_collection.cpp  font_collection.hpp  font_context.cpp  font_context.h
source/game/: abstractloader.hpp  addon_manager.cpp  addon_manager.hpp  advisor.cpp  advisor.hpp  alarm_event_holder.cpp  alarm_event_holder.hpp  ambientsound.cpp  ambientsound.hpp  astarpathfinding.cpp  astarpathfinding.hpp  astarpoint.hpp  build_options.cpp  build_options.hpp  citizen_group.cpp  city.cpp  (+177 more)
tileset/: CMakeLists.txt  README.md  main.cpp  tileset.model
updater/: CMakeLists.txt  CRC.h  ConsoleUpdater.cpp  ConsoleUpdater.h  Constants.h  ExceptionSafeThread.h  IniFile.cpp  IniFile.h  PackageInstructions.h  Pk4Mappings.h  ProgramOptions.h  ReleaseFileset.h  ReleaseManifest.h  ReleaseVersions.h  SvnClient.cpp  SvnClient.h  SvnClientImpl.cpp  SvnClientImpl.h  UpdatePackage.h  UpdatePackageInfo.h  Util.cpp  Util.h  consoleupdater.cpp  consoleupdater.hpp  constants.hpp  exceptionsafethread.hpp  inifile.cpp  inifile.hpp  main.cpp  packager.cpp  packageroptions.hpp  programoptions.hpp  progresshandler.hpp  releasefileset.cpp  releasefileset.hpp  releasemanifest.hpp  releaseversions.hpp  updatecontroller.cpp  updatecontroller.hpp  updater.cpp  (+8 more)
(+1698 files in other folders)
